--- a/Dimesoft.Simon.Client/App.xaml
+++ b/Dimesoft.Simon.Client/App.xaml
@@ -1,24 +1,18 @@
-﻿<Application
-    x:Class="Dimesoft.Simon.Client.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Dimesoft.Simon.Client"
-    xmlns:localData="using:Dimesoft.Simon.Client.Data">
-
-    <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-
-                <!-- 
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Application x:Class="Dimesoft.Simon.Client.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:Dimesoft.Simon.Client" xmlns:localData="using:Dimesoft.Simon.Client.Data" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:vm="clr-namespace:Dimesoft.Simon.Client.ViewModel"
+             xmlns:ViewModel="using:Dimesoft.Simon.Client.ViewModel" mc:Ignorable="d">
+  <Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <!-- 
                     Styles that define common aspects of the platform look and feel
                     Required by Visual Studio project and item templates
                  -->
-                <ResourceDictionary Source="Common/StandardStyles.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-
-            <!-- Application-specific resources -->
-
-            <x:String x:Key="AppName">Dimesoft.Simon.Client</x:String>
-        </ResourceDictionary>
-    </Application.Resources>
+        <ResourceDictionary Source="Common/StandardStyles.xaml" />
+      </ResourceDictionary.MergedDictionaries>
+      <!-- Application-specific resources -->
+      <x:String x:Key="AppName">Dimesoft.Simon.Client</x:String>
+      <ViewModel:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
