--- a/Dimesoft.Simon.Client/Styles/Controls.xaml
+++ b/Dimesoft.Simon.Client/Styles/Controls.xaml
@@ -15,9 +15,9 @@
                             <VisualStateGroup x:Name="Common">
                                 <VisualState x:Name="Normal" />
                                 <VisualState x:Name="Lit">
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetName="LightBulb" Storyboard.TargetProperty="Opacity"
-                                                         To="1" Duration="0" />
+                                    <Storyboard >
+                                        <DoubleAnimation Storyboard.TargetName="Lightbulb" Storyboard.TargetProperty="Opacity"
+                                                         To=".75" Duration="0" />
                                     </Storyboard>
                                 </VisualState>
                                 
@@ -31,20 +31,13 @@
                                 <SolidColorBrush Color="{Binding ButtonColor, RelativeSource={RelativeSource TemplatedParent}}" />
                             </Path.Fill>
                         </Path>
-
-                        
-                        <ContentPresenter />
-                        <Rectangle x:Name="LightBulb" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                                   Opacity="0"
-                                   >
-                            <Rectangle.Fill>
-                                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                                    <GradientStop Color="#34FFFFFF" Offset="0" />
-                                    <GradientStop Color="Transparent" Offset="1" />
-                                </LinearGradientBrush>
-                            </Rectangle.Fill>
-                            
-                        </Rectangle>
+                        <Path x:Name="Lightbulb" Width="614" Height="320"  Stretch="Fill" Opacity="0" 
+                              Data="F1 M 405.414,354.994L 405.414,355L 52.3529,355C 45.7255,355 40.3529,349.627 40.3529,343L 40.3529,46.9999C 40.3529,40.3726 45.7255,35 52.3529,35L 642.353,35C 648.98,35 654.353,40.3726 654.353,46.9999L 654.351,161.666C 654.351,164.979 651.664,167.666 648.351,167.666L 648.351,167.714C 527.343,179.773 430.808,254.164 411.518,349.046C 411.49,349.202 411.459,349.356 411.424,349.509C 410.717,352.627 408.573,354.994 405.414,354.994 Z "
+                              >
+                            <Path.Fill>
+                                <ImageBrush Stretch="Fill"  ImageSource="ms-appx:///Assets/RadialGradient.png" />
+                            </Path.Fill>
+                        </Path>
                         </Grid>
                 </ControlTemplate>
             </Setter.Value>
