--- a/Dimesoft.Simon.Client/View/GameBoard.xaml
+++ b/Dimesoft.Simon.Client/View/GameBoard.xaml
@@ -37,19 +37,43 @@
         </Controls:LightButton>
 
         <Grid x:Name="StatusScreen" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Ellipse   Fill="Purple" Height="385" Width="480" />
-                    <Button Content="Start" Command="{Binding StartNewGameCommand}" Height="35" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Ellipse Fill="Purple" Height="385" Width="480" />
+                <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    
+                    <Button Grid.Row="0" Content="Start" Command="{Binding StartNewGameCommand}" Height="35" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    
+                    <Grid Grid.Row="1" Margin="10,25,10,0" Background="Red">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+<ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                        </Grid.RowDefinitions>                        
+                        <TextBlock Grid.Row="0" Grid.Column="0" Text="Game Time:"
+                                   FontFamily="Calibri" FontSize="18"
+                                   VerticalAlignment="Center" HorizontalAlignment="Center" />
+                        
+                        <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding GameDuration}"   
+                                   FontFamily="Calibri" FontSize="18"
+                                   VerticalAlignment="Center" HorizontalAlignment="Left" />
+                        
+                        <TextBlock Grid.Row="0" Grid.Column="1" Text="Moves:"
+                                   FontFamily="Calibri" FontSize="18"
+                                   VerticalAlignment="Center" HorizontalAlignment="Center" />
 
-                <TextBlock Text="{Binding GameDuration}"   
-                               FontFamily="Calibri" FontSize="18"
-                               VerticalAlignment="Center" HorizontalAlignment="Left" Margin="40,0,0,0" 
-                               >
-                    <Run Text="Game: " />
-                    <Run Text="{Binding GameDuration}"  />
-                </TextBlock>
-
-                               
-            
+                        <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding GameDuration}"   
+                                   FontFamily="Calibri" FontSize="18"
+                                   VerticalAlignment="Center" HorizontalAlignment="Left" />                        
+                        
+                    </Grid>
+                </Grid>
+                                           
             </Grid>
 
         </Grid>
